--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.4.1",
     "moment": "^2.25.3",
