--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/uuid": "^7.0.3",
     "bootstrap": "^4.4.1",
+    "final-form": "^4.19.1",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.4.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
