--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "final-form": "^4.19.1",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
+    "moment-timezone": "^0.5.28",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -30,6 +31,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "reselect": "^4.0.0",
     "typescript": "~3.7.2",
     "uuid": "^8.0.0"
   },
