--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^7.0.3",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "final-form": "^4.19.1",
     "lodash": "^4.17.19",
